# bl1nk-keyword-validator

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  QWEN.md  README.md  REGISTRY.md  SPEC.md  TODO.md  keyword-registry  keyword-registry-schema.json  keyword-registry.schema.json
.cargo/: config.toml
.github/: cloudbuild.yaml  pull_request_template.md
.github/workflows/: ci.yml  registry-validate.yml  release.yml
.qwen/: settings.json
.qwen/commands/: learn.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  schema.rs  search.rs  validator.rs
crate/cli/src/: main.rs
crate/core/: Cargo.toml
crate/core/examples/: load_v020.rs
crate/core/src/: error.rs  lib.rs  scanner.rs  schema.rs  search.rs  validator.rs
docs/: SMART_SEARCH.md
schema/: keyword-registry-schema-v0.1.7.json  keyword-registry-schema-v0.2.0.json  keyword-registry-schema-v0.3.0.json
scripts/: bump-version.sh
settings/v1.1/: keyword-schema.json
src/: lib.rs  main.rs  schema.rs  search.rs  validator.rs
