[package]
name = "bl1nk-keyword-core"
version = "1.1.0"
edition = "2021"
authors = ["อาจารย์"]
description = "Core logic for keyword validation and search"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"
fuzzy-matcher = "0.3"
schemars = "0.8"
