[package]
name = "bl1nk-keyword-core"
version = "1.1.0"
edition = "2021"
authors = ["อาจารย์"]
description = "Core logic for keyword validation and search"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
thiserror = "1.0"
fuzzy-matcher = "0.3"
schemars = "0.8"
strsim = "0.11"
walkdir = "2.5"
tracing = "0.1"
csv = "1.3"

[dev-dependencies]
tempfile = "3.0"